[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/column-elements/BaseHboxElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/column-elements/InputToInput.gd" type="Script" id=2]

[node name="InputToInput" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ColorRect" parent="." index="0"]
color = Color( 0.14902, 0.14902, 0.14902, 0.529412 )

[node name="LeftLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer" index="0"]
margin_right = 490.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer" index="1"]
margin_left = 500.0
margin_top = 283.0
margin_right = 504.0
margin_bottom = 297.0
text = ":"

[node name="RightLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer" index="2"]
margin_left = 514.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
